--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <h1>Hola</h1>
+    <footer>
+        <section class="container">
+            <article>
+                <h2>LOGOTIPO</h2>
+                <div class="menuFooter">
+                    <div class="botones">Home</div>
+                    <div class="botones">Service</div>
+                    <div class="botones">Resource</div>
+                    <div class="botones">Contact</div>
+                    <div class="botones">About</div>
+                </div>
+                <div class="infoFooter">
+                    <p>Lörem ipsum od ohet dilogi. Bell trabel, samuligt, ohöbel utom diska. Jinesade bel när feras redorade i belogi. FAR paratyp i</p>
+                    <p> muvåning, och pesask vyfisat. Viktiga poddradio har un mad och inde.</p>
+                  </div>
+
+            </article>
+            <article class="bottom">
+                <div class="barraIzq"></div>
+                <div class="iconos">
+                    <img src="/public/assets/img/svg/Facebook.svg" alt="">
+                    <img src="/public/assets/img/svg/Twitter.svg" alt="">
+                    <img src="/public/assets/img/svg/Linkedin.svg" alt="">
+                    <img src="/public/assets/img/svg/Instagram.svg" alt="">
+                </div>
+                <div class="barraDer"></div>
+            </article>
+        </section>
+    </footer>
 </body>
 </html>
