--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <footer>
-        <section class="container">
-            <article>
+
+            <article class="top">
                 <h2>LOGOTIPO</h2>
                 <div class="menuFooter">
                     <div class="botones">Home</div>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="barraDer"></div>
             </article>
-        </section>
+
     </footer>
 </body>
 </html>
